--- a/practice/file.html
+++ b/practice/file.html
@@ -6,10 +6,12 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="/add-home" method="get">
-    <input type="text" name="name" placeholder="Enter your name"> <br>
-    <input type="text" name="house-name" placeholder="Enter your house-name"> <br>
-    <input type="submit" value="Submit">
-  </form>
+  <header>
+    <h1>Welcome to home page</h1>
+  </header>
+  <main>
+     <a href="/add-home" >add home</a>
+  </main>
+   
 </body>
 </html>
