--- a/practice/file.html
+++ b/practice/file.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./output.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to home page</h1>
+    <h1 class="text-3xl font-bold underline ">Welcome to home page</h1>
   </header>
   <main>
      <a href="/add-home" >add home</a>
